--- a/styles.css
+++ b/styles.css
@@ -172,3 +172,17 @@ body {
     text-align: center;
     padding-bottom: 5px;
 }
+
+/* tooltip */
+
+#tooltip {
+    position: absolute;
+    z-index: 1;
+    background: #000;
+    color: #fff;
+    font-family: sans-serif;
+    font-size: 11px;
+    padding: 4px;
+    padding: 8px;
+    pointer-events: none;
+}
