--- a/src/App.css
+++ b/src/App.css
@@ -39,6 +39,79 @@ body {
   width: 100%;
 }
 
+/* map */
+
+.map {
+  width: 100%;
+  height: 100%;
+}
+
+/* sidebar */
+
+.ui.sidebar {
+  background-color: white;
+  display: grid;
+  grid-auto-flow: column;
+  justify-items: end;
+  padding: 2px 2px;
+}
+
+.ui.sidebar > :nth-child(1) {
+  /*justify-self: end;*/
+  display: grid;
+  grid-auto-flow: column;
+  align-items: center;
+}
+
+.ui.sidebar > :nth-child(2) {
+  /*justify-self: end;*/
+}
+
+.ui.segment {
+  padding: 0;
+  width: 100%;
+  height: 100%;
+}
+
+.pusher {
+  width: 100%;
+  height: 100%;
+}
+
+/* search */
+
+#open-search-panel-btn {
+  margin-top: 5px;
+}
+
+.ui.selection.dropdown {
+  line-height: unset;
+}
+
+.ui.selection.dropdown > .dropdown.icon {
+  top: unset;
+}
+
+.ui.form {
+  background-color: white;
+}
+
+.ui.form .inline.fields {
+  padding: 5px;
+}
+
+#parcel-size {
+  width: 120px;
+}
+
+#site-coverage {
+  width: 80px;
+}
+
+#delta {
+  width: 80px;
+}
+
 /* search */
 
 /*.pac-card {
@@ -119,14 +192,4 @@ body {
   padding: 8px;
   pointer-events: none;
   /*display: block;*/
-}
-
-/* search */
-
-.ui.selection.dropdown {
-  line-height: unset;
-}
-
-.ui.selection.dropdown > .dropdown.icon {
-  top: unset;
 }
