--- a/src/App.css
+++ b/src/App.css
@@ -1,32 +1,3 @@
-/*.App {
-  text-align: center;
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-*/
-
 body {
   margin: 0;
   padding: 0;
@@ -152,7 +123,7 @@ body {
   border-color: #4d90fe;
 }*/
 
-/* legend */
+/* custom mapbox controls */
 
 .custom-control {
   display: inline-grid;
@@ -165,6 +136,8 @@ body {
   margin-right: 10px;
   margin-bottom: 5px;
 }
+
+/* legend */
 
 .legend-key {
   display: inline-block;
@@ -192,4 +165,30 @@ body {
   padding: 8px;
   pointer-events: none;
   /*display: block;*/
+}
+
+/* toggle layers */
+
+.toggle-layers {
+  display: inline-grid;
+  grid-auto-flow: row;
+  grid-row-gap: 7px;
+  background-color: white;
+  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
+  border-radius: 3px;
+  padding: 5px;
+  margin-right: 10px;
+  margin-bottom: 5px;
+}
+
+.toggle-layers > div > *:first-child {
+  white-space: nowrap;
+  justify-self: end;
+}
+
+.toggle-layer {
+  display: grid;
+  grid-template-columns: auto 15px;
+  grid-column-gap: 4px;
+  align-items: center;
 }
