--- a/src/App.css
+++ b/src/App.css
@@ -25,6 +25,7 @@ body {
   grid-auto-flow: column;
   justify-items: end;
   padding: 2px 2px;
+  overflow-y: unset !important;
 }
 
 .ui.sidebar > :nth-child(1) {
@@ -56,7 +57,7 @@ body {
 }
 
 .ui.selection.dropdown {
-  line-height: unset;
+  /*line-height: unset;*/
 }
 
 .ui.selection.dropdown > .dropdown.icon {
