--- a/src/App.css
+++ b/src/App.css
@@ -17,6 +17,25 @@ body {
   height: 100%;
 }
 
+.loading-container {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: white;
+  opacity: 0.8;
+  z-index: 100;
+}
+
+.loading {
+  position: relative;
+  left: calc(50% - 32px);
+  top: calc(50% - 32px);
+  height: 64px;
+  width: 64px;
+}
+
 /* sidebar */
 
 .ui.sidebar {
@@ -165,7 +184,9 @@ body {
   padding: 4px;
   padding: 8px;
   pointer-events: none;
-  /*display: block;*/
+  display: grid;
+  grid-auto-flow: row;
+  grid-row-gap: 1px;
 }
 
 /* toggle layers */
