--- a/src/App.css
+++ b/src/App.css
@@ -196,11 +196,12 @@ body {
   grid-auto-flow: row;
   grid-row-gap: 7px;
   background-color: white;
-  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
+  box-sizing: border-box;
+  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.3);
+  border: 1px solid transparent;
   border-radius: 3px;
   padding: 5px;
   margin-right: 10px;
-  margin-bottom: 5px;
 }
 
 .toggle-layers > div > *:first-child {
@@ -213,4 +214,20 @@ body {
   grid-template-columns: auto 15px;
   grid-column-gap: 4px;
   align-items: center;
+}
+
+/* address autocomplete search */
+
+.autocomplete {
+  width: 200px;
+  height: 32px;
+  padding: 0 12px;
+  box-sizing: border-box;
+  border: 1px solid transparent;
+  border-radius: 3px;
+  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.3);
+  outline: none;
+  text-overflow: ellipsis;
+  margin-right: 10px;
+  margin-top: 10px;
 }
